--- a/last-module-codecoverage/pom.xml
+++ b/last-module-codecoverage/pom.xml
@@ -11,6 +11,7 @@
 
     <groupId>de.adorsys.opba</groupId>
     <artifactId>last-module-codecoverage</artifactId>
+    <name>last-module-codecoverage</name>
 
     <dependencies>
         <dependency>
