--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <version>0.0.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>Open Banking Gateway</name>
+    <name>open-banking-gateway</name>
     <description>Provides Access to Banking API</description>
 
     <modules>
