--- a/opba-banking-rest-api/pom.xml
+++ b/opba-banking-rest-api/pom.xml
@@ -6,12 +6,10 @@
 		<groupId>de.adorsys.opba</groupId>
 		<artifactId>open-banking-gateway</artifactId>
 		<version>0.0.3-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>opba-banking-rest-api</artifactId>
-	<version>0.0.3-SNAPSHOT</version>
-	<name>Banking embeded rest API</name>
+	<name>opba-banking-rest-api</name>
 
 	<properties>
 		<ruleset.basedir>..</ruleset.basedir>
