--- a/opba-consent-rest-api/pom.xml
+++ b/opba-consent-rest-api/pom.xml
@@ -6,11 +6,10 @@
     <groupId>de.adorsys.opba</groupId>
     <artifactId>open-banking-gateway</artifactId>
     <version>0.0.3-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>opba-consent-rest-api</artifactId>
-  <name>Consent Embedded Rest API</name>
+  <name>opba-consent-rest-api</name>
 
   <properties>
     <ruleset.basedir>../..</ruleset.basedir>
