section in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,12 @@ before_deploy:
   - echo $GPG_OWNERTRUST | base64 --decode | $GPG_EXECUTABLE --import-ownertrust
 
 deploy:
-  -
-    skip_cleanup: true
-    provider: script
-    script: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.host.url=$SONAR_HOST -Dsonar.login=$SONAR_TOKEN
-    on:
-      branch: develop
+#  -
+#    skip_cleanup: true
+#    provider: script
+#    script: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.host.url=$SONAR_HOST -Dsonar.login=$SONAR_TOKEN
+#    on:
+#      branch: develop
   -
     skip_cleanup: true
     provider: script
