--- a/core/banking-protocol/Dockerfile
+++ b/core/banking-protocol/Dockerfile
@@ -10,4 +10,4 @@ COPY target/${JAR_FILE} ${JAR_FILE}
 
 EXPOSE 8080
 
-ENTRYPOINT ["sh", "-c", "java -jar ${JAR_FILE}"]
+ENTRYPOINT ["sh", "-c", "java", "-jar", "${JAR_FILE}"]
