--- a/last-module-codecoverage/pom.xml
+++ b/last-module-codecoverage/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>open-banking-gateway</artifactId>
         <groupId>de.adorsys.opba</groupId>
-        <version>0.0.3-SNAPSHOT</version>
+        <version>0.0.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
