--- a/core/banking-protocol/pom.xml
+++ b/core/banking-protocol/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>de.adorsys.opba</groupId>
         <artifactId>core</artifactId>
-        <version>0.0.3</version>
+        <version>0.0.4-SNAPSHOT</version>
     </parent>
 
     <!-- BPMN based engine to talk to banks -->
