--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
         <maven.jxr.plugin.version>3.0.0</maven.jxr.plugin.version>
         <bouncycastle.version>1.64</bouncycastle.version>
         <liquibase.version>3.8.0</liquibase.version>
+        <mapstruct.version>1.3.1.Final</mapstruct.version>
 
         <!-- Flowable BPMN -->
         <flowable.version>6.4.2</flowable.version>
@@ -247,7 +248,7 @@
 
     <build>
         <plugins>
-            <!-- lombok -->
+            <!-- lombok and mapstruct -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -260,6 +261,11 @@
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                             <version>${lombok.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${mapstruct.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
