OBG-85. Pre-added validator

--- a/core/banking-protocol/pom.xml
+++ b/core/banking-protocol/pom.xml
@@ -125,11 +125,15 @@
             <version>${springdoc.version}</version>
         </dependency>
 
-        <!-- Mappers -->
+        <!-- Mappers/Validators -->
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>${mapstruct.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
         </dependency>
 
         <!-- Test only dependencies -->
