--- a/fintech-ui/angular.json
+++ b/fintech-ui/angular.json
@@ -62,7 +62,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "banking-gateway-ui:build"
+            "browserTarget": "banking-gateway-ui:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
