--- a/fintech-ui/angular.json
+++ b/fintech-ui/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "banking-gateway-ui": {
+    "fintech-ui": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/banking-gateway-ui",
+            "outputPath": "dist/fintech-ui",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,19 +62,19 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "banking-gateway-ui:build",
+            "browserTarget": "fintech-ui:build",
             "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
-              "browserTarget": "banking-gateway-ui:build:production"
+              "browserTarget": "fintech-ui:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "banking-gateway-ui:build"
+            "browserTarget": "fintech-ui:build"
           }
         },
         "test": {
@@ -100,16 +100,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "banking-gateway-ui:serve"
+            "devServerTarget": "fintech-ui:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "banking-gateway-ui:serve:production"
+              "devServerTarget": "fintech-ui:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "banking-gateway-ui"
+  "defaultProject": "fintech-ui"
 }
