OBG-85. Refactored saga to do special execution when doing validation

--- a/pom.xml
+++ b/pom.xml
@@ -315,6 +315,7 @@
                     <consoleOutput>true</consoleOutput>
                     <failsOnError>true</failsOnError>
                     <linkXRef>false</linkXRef>
+                    <excludes>**/generated/**/*</excludes>
                 </configuration>
                 <executions>
                     <execution>
