--- a/opba-banking-rest-api/pom.xml
+++ b/opba-banking-rest-api/pom.xml
@@ -54,15 +54,6 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -70,7 +61,7 @@
 			<plugin>
 				<groupId>io.swagger.codegen.v3</groupId>
 				<artifactId>swagger-codegen-maven-plugin</artifactId>
-				<version>3.0.11</version>
+				<version>${swagger-codegen-maven-plugin.version}</version>
 				<executions>
 					<execution>
 						<goals>
@@ -105,14 +96,14 @@
 					<dependency>
 						<groupId>io.swagger.codegen.v3</groupId>
 						<artifactId>swagger-codegen-generators</artifactId>
-						<version>1.0.11</version>
+						<version>${swagger-codegen-generators.version}</version>
 					</dependency>
 				</dependencies>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>3.0.0</version>
+				<version>${build-helper-maven-plugin.version}</version>
 				<executions>
 					<execution>
 						<id>add-generated-source</id>
