--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
         <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
         <java.version>1.8</java.version>
         <pmd.plugin.version>3.10.0</pmd.plugin.version>
+        <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
 
         <!-- Framework libs -->
         <spring-boot.version>2.2.2.RELEASE</spring-boot.version>
@@ -80,8 +81,9 @@
         <fasterxml-data-format.version>2.9.8</fasterxml-data-format.version>
         <swaggerv3.version>2.1.0</swaggerv3.version>
         <swagger.version>1.5.23</swagger.version>
-        <swagger-codegen.version>1.0.11</swagger-codegen.version>
-        <springdoc.version>1.2.18</springdoc.version> <!-- springfox replacement for OpenApi 3 -->
+        <swagger-codegen-generators.version>1.0.11</swagger-codegen-generators.version>
+        <swagger-codegen-maven-plugin.version>3.0.11</swagger-codegen-maven-plugin.version>
+        <springdoc-openapi-ui.version>1.2.21</springdoc-openapi-ui.version> <!-- springfox replacement for OpenApi 3 -->
         <springfox.version>2.9.2</springfox.version>
         <jetbrains.annotations.version>17.0.0</jetbrains.annotations.version>
         <lombok.version>1.18.10</lombok.version>
