Normalizing dependency name

--- a/core/banking-protocol/pom.xml
+++ b/core/banking-protocol/pom.xml
@@ -122,7 +122,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
-            <version>${springdoc.version}</version>
+            <version>${springdoc-openapi-ui.version}</version>
         </dependency>
 
         <!-- Test only dependencies -->
