Normalizing location for checkstyle and pmd config.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -13,6 +13,12 @@
     <name>core</name>
     <packaging>pom</packaging>
 
+    <properties>
+      <!-- Hard reference to root directory. Used to reference pmd anc checkstyle files from root.
+      Change this if depth changes. Current: /open-banking-gateway/core -->
+      <main.basedir>${project.parent.basedir}</main.basedir>
+    </properties>
+
     <modules>
         <module>banking-protocol</module>
     </modules>
