--- a/opba-consent-rest-api/pom.xml
+++ b/opba-consent-rest-api/pom.xml
@@ -11,10 +11,12 @@
   <artifactId>opba-consent-rest-api</artifactId>
   <name>opba-consent-rest-api</name>
 
-	<properties>
-		<ruleset.basedir>../..</ruleset.basedir>
+  <properties>
+    <!-- Hard reference to root directory. Used to reference pmd anc checkstyle files from root.
+    Change this if depth changes. Current: /open-banking-gateway/open-banking-gateway -->
+    <main.basedir>${project.parent.basedir}</main.basedir>
     <openapi-spec-file-location>${project.basedir}/src/main/resources/static/consent_api.yml</openapi-spec-file-location>
-	</properties>
+  </properties>
 
 
   <dependencies>
@@ -72,7 +74,7 @@
             <configuration>
               <inputSpec>${openapi-spec-file-location}</inputSpec>
               <language>spring</language>
-              <output>${project.basedir}/generated/</output>
+              <output>${project.build.directory}/generated-sources/open-api/</output>
               <configOptions>
                 <sourceFolder>src/main</sourceFolder>
                 <basePackage>de.adorsys.opba.consentapi</basePackage>
@@ -113,7 +115,7 @@
             </goals>
             <configuration>
               <sources>
-                <source>${project.basedir}/generated/src/main</source>
+                <source>${project.build.directory}/generated-sources/open-api/src/main</source>
               </sources>
             </configuration>
           </execution>
