--- a/last-module-codecoverage/pom.xml
+++ b/last-module-codecoverage/pom.xml
@@ -13,6 +13,12 @@
     <artifactId>last-module-codecoverage</artifactId>
     <name>last-module-codecoverage</name>
 
+    <properties>
+        <!-- Hard reference to root directory. Used to reference pmd anc checkstyle files from root.
+        Change this if depth changes. Current: /open-banking-gateway/last-module-codecoverage -->
+        <main.basedir>${project.parent.basedir}</main.basedir>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>de.adorsys.opba</groupId>
