--- a/opba-embedded-starter/pom.xml
+++ b/opba-embedded-starter/pom.xml
@@ -13,7 +13,9 @@
     <name>opba-embedded-starter</name>
 
     <properties>
-        <ruleset.basedir>..</ruleset.basedir>
+      <!-- Hard reference to root directory. Used to reference pmd anc checkstyle files from root.
+      Change this if depth changes. Current: /open-banking-gateway/opba-embedded-starter -->
+      <main.basedir>${project.parent.basedir}</main.basedir>
     </properties>
 
     <dependencies>
