--- a/pom.xml
+++ b/pom.xml
@@ -287,6 +287,7 @@
                     </rulesets>
                     <excludeRoots>
                         <excludeRoot>${project.build.directory}/generated-sources</excludeRoot>
+                        <excludeRoot>${project.build.directory}/generated-sources/open-api/src/main</excludeRoot>
                     </excludeRoots>
                     <failOnViolation>true</failOnViolation>
                     <printFailingErrors>true</printFailingErrors>
