--- a/core/banking-protocol/src/main/resources/application.yml
+++ b/core/banking-protocol/src/main/resources/application.yml
@@ -24,13 +24,13 @@ spring:
 protocol:
   redirect:
     consent-accounts:
-      ok: 'http://localhost:8080/v1/consents/confirm/accounts/#{execution.getProcessInstanceId()}/'
-      nok: 'http://localhost:8080/v1/consents/failed/accounts/#{execution.getProcessInstanceId()}/'
+      ok: 'http://localhost:8080/v1/consents/confirm/accounts/#{context.getAction()}/sagas/#{execution.getRootProcessInstanceId()}/consent-processes/#{execution.getProcessInstanceId()}/'
+      nok: 'http://localhost:8080/v1/consents/failed/accounts/#{context.getAction()}/sagas/#{execution.getRootProcessInstanceId()}/consent-processes/#{execution.getProcessInstanceId()}/'
     parameters:
-      provide-more: 'http://localhost:5500/parameters/provide-more/#{execution.getProcessInstanceId()}/'
-      ask-psu-password: 'http://localhost:5500/parameters/ask-psu-password/#{execution.getProcessInstanceId()}/'
-      authenticate-consent: 'http://localhost:5500/parameters/authenticate-consent/#{execution.getProcessInstanceId()}/'
-      select-sca-method: 'http://localhost:5500/parameters/select-sca-method/#{execution.getProcessInstanceId()}/'
+      provide-more: 'http://localhost:5500/parameters/provide-more/sagas/#{execution.getRootProcessInstanceId()}/executions/#{execution.getId()}/'
+      ask-psu-password: 'http://localhost:5500/parameters/ask-psu-password/sagas/#{execution.getRootProcessInstanceId()}/executions/#{execution.getId()}/'
+      authenticate-consent: 'http://localhost:5500/parameters/authenticate-consent/sagas/#{execution.getRootProcessInstanceId()}/executions/#{execution.getId()}/'
+      select-sca-method: 'http://localhost:5500/parameters/select-sca-method/sagas/#{execution.getRootProcessInstanceId()}/executions/#{execution.getId()}/'
 
 pkcs12:
   keyStore: sample-qwac.keystore
