--- a/opba-banking-rest-api/pom.xml
+++ b/opba-banking-rest-api/pom.xml
@@ -17,6 +17,7 @@
 		<main.basedir>${project.parent.basedir}</main.basedir>
     <openapi-spec-file-location-banking_api_ais>${project.basedir}/src/main/resources/static/banking_api_ais.yml</openapi-spec-file-location-banking_api_ais>
     <openapi-spec-file-location-tpp_bank_search_api>${project.basedir}/src/main/resources/static/tpp_bank_search_api.yml</openapi-spec-file-location-tpp_bank_search_api>
+    <openapi-spec-file-location-tpp_token_api>${project.basedir}/src/main/resources/static/tpp_token_api.yml</openapi-spec-file-location-tpp_token_api>
 	</properties>
 
 	<dependencies>
@@ -112,6 +113,35 @@
                 <configPackage>de.adorsys.opba.bankingapi.config</configPackage>
                 <modelPackage>de.adorsys.opba.bankingapi.search.model</modelPackage>
                 <apiPackage>de.adorsys.opba.bankingapi.search.resource</apiPackage>
+                <interfaceOnly>true</interfaceOnly>
+                <skipOverwrite>true</skipOverwrite>
+                <dateLibrary>java8</dateLibrary>
+                <java8>true</java8>
+                <implicitHeaders>false</implicitHeaders>
+                <delegatePattern>true</delegatePattern>
+                <useTags>true</useTags>
+                <library>spring-mvc</library>
+                <swaggerDocketConfig>false</swaggerDocketConfig>
+              </configOptions>
+              <generateApiTests>false</generateApiTests>
+              <generateModelTests>false</generateModelTests>
+            </configuration>
+          </execution>
+          <execution>
+            <id>generate_tpp_token_api</id>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <configuration>
+              <inputSpec>${openapi-spec-file-location-tpp_token_api}</inputSpec>
+              <language>spring</language>
+              <output>${project.build.directory}/generated-sources/open-api/</output>
+              <configOptions>
+                <sourceFolder>src/main</sourceFolder>
+                <basePackage>de.adorsys.opba.bankingapi.token</basePackage>
+                <configPackage>de.adorsys.opba.bankingapi.config</configPackage>
+                <modelPackage>de.adorsys.opba.bankingapi.token.model</modelPackage>
+                <apiPackage>de.adorsys.opba.bankingapi.token.resource</apiPackage>
                 <interfaceOnly>true</interfaceOnly>
                 <skipOverwrite>true</skipOverwrite>
                 <dateLibrary>java8</dateLibrary>
