--- a/core/banking-protocol/pom.xml
+++ b/core/banking-protocol/pom.xml
@@ -135,6 +135,10 @@
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+        </dependency>
 
         <!-- Test only dependencies -->
         <!-- BouncyCastle to generate P12 keystores -->
