--- a/fintech-examples/fintech-server/pom.xml
+++ b/fintech-examples/fintech-server/pom.xml
@@ -60,7 +60,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.2.1.RELEASE</version>
+                <version>${spring-boot.version}</version>
                 <configuration>
                  <mainClass>de.adorsys.obpa.fintech.server.FinTechApplication</mainClass>
                 </configuration>
