--- a/opba-embedded-starter/pom.xml
+++ b/opba-embedded-starter/pom.xml
@@ -65,7 +65,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.2.1.RELEASE</version>
+                <version>${spring-boot.version}</version>
                 <configuration>
                  <mainClass>de.adorsys.obpa.starter.OpenBankingEmbeddedApplication</mainClass>
                 </configuration>
