--- a/opba-banking-rest-api/pom.xml
+++ b/opba-banking-rest-api/pom.xml
@@ -73,8 +73,10 @@
 							<inputSpec>${openapi-spec-file-location}</inputSpec>
 							<language>spring</language>
 							<output>${project.build.directory}/generated-sources/open-api/</output>
+							<generateApiTests>false</generateApiTests>
+							<generateModelTests>false</generateModelTests>
 							<configOptions>
-								<sourceFolder>src/main</sourceFolder>
+								<sourceFolder>src/main/java</sourceFolder>
 								<basePackage>de.adorsys.opba.bankingapi.ais</basePackage>
 								<configPackage>de.adorsys.opba.bankingapi.config</configPackage>
 								<modelPackage>de.adorsys.opba.bankingapi.ais.model</modelPackage>
