--- a/opba-consent-rest-api/pom.xml
+++ b/opba-consent-rest-api/pom.xml
@@ -74,9 +74,11 @@
             <configuration>
               <inputSpec>${openapi-spec-file-location}</inputSpec>
               <language>spring</language>
-              <output>${project.build.directory}/generated-sources/open-api/</output>
+              <output>${project.build.directory}/generated-sources/open-api</output>
+              <generateApiTests>false</generateApiTests>
+              <generateModelTests>false</generateModelTests>
               <configOptions>
-                <sourceFolder>src/main</sourceFolder>
+                <sourceFolder>src/main/java</sourceFolder>
                 <basePackage>de.adorsys.opba.consentapi</basePackage>
                 <configPackage>de.adorsys.opba.consentapi.config</configPackage>
                 <modelPackage>de.adorsys.opba.consentapi.model</modelPackage>
@@ -115,7 +117,7 @@
             </goals>
             <configuration>
               <sources>
-                <source>${project.build.directory}/generated-sources/open-api/src/main</source>
+                <source>${project.build.directory}/generated-sources/open-api/src/main/java</source>
               </sources>
             </configuration>
           </execution>
