--- a/pom.xml
+++ b/pom.xml
@@ -287,10 +287,6 @@
                     </rulesets>
                     <excludeRoots>
                         <excludeRoot>${project.build.directory}/generated-sources</excludeRoot>
-                        <!-- 
-                        <excludeRoot>${main.basedir}/opba-banking-rest-api/target/generated-sources/open-api/src/main</excludeRoot>
-                        <excludeRoot>${main.basedir}/opba-consent-rest-api/target/generated-sources/open-api/src/main</excludeRoot>
-                         -->
                     </excludeRoots>
                     <failOnViolation>true</failOnViolation>
                     <printFailingErrors>true</printFailingErrors>
@@ -363,6 +359,9 @@
                 <configuration>
                     <append>true</append>
                     <propertyName>surefireArgLine</propertyName>
+                    <excludes>
+                        <exclude>**/generated-sources/***</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
 
