--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
+<?xml version="1.0" encoding="UTF-8"?><!--
   ~ Copyright 2018-2019 adorsys GmbH & Co KG
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,8 +14,7 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
@@ -111,9 +109,10 @@
         <assertj.version>3.12.2</assertj.version>
         <testcontainers.version>1.12.4</testcontainers.version>
         <slf4j-simple.version>1.7.29</slf4j-simple.version>
-
+        <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
         <!-- other properties -->
         <surefireArgLine/>
+
     </properties>
 
     <repositories>
@@ -258,8 +257,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -315,7 +314,7 @@
                     <failsOnError>true</failsOnError>
                     <linkXRef>false</linkXRef>
                     <sourceDirectories>
-                      <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
+                        <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
                     </sourceDirectories>
                 </configuration>
                 <executions>
@@ -359,9 +358,6 @@
                 <configuration>
                     <append>true</append>
                     <propertyName>surefireArgLine</propertyName>
-                    <excludes>
-                        <exclude>**/generated-sources/**</exclude>
-                    </excludes>
                 </configuration>
             </plugin>
 
@@ -398,6 +394,33 @@
                     </execution>
                 </executions>
             </plugin>
+
+        <!-- as cobertura still does not support lamda expressions, we get a lot of warnings of type:
+        Last useful checkpoint: "de.adorsys.opba.core.protocol.config.flowable.FlowableConfig.storeCustomClassesAsJson(String,int,ObjectMapper)"
+        Encountered " ">" "> "" at line 28, column 37.
+        As it is not supported for 5 years, does not make sense to use it at all
+        https://github.com/MoodCat/MoodCat.me-Core/issues/103
+        -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>${cobertura-maven-plugin.version}</version>
+                <configuration>
+                    <quiet>true</quiet>
+                    <formats>
+                        <format>html</format>
+                        <format>xml</format>
+                    </formats>
+                    <check />
+                    <encoding>UTF-8</encoding>
+                    <instrumentation>
+                        <includes>
+                            <include>target/generated-sources/**/src/main/java</include>
+                        </includes>
+                    </instrumentation>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
@@ -454,8 +477,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
                         <version>1.6</version>
-                        <configuration>
-                        </configuration>
+                        <configuration></configuration>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
