fix branch name

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,7 @@ deploy:
     skip_cleanup: true
     script: bash scripts/deploy_openshift.sh
     on:
-      branch: feature/OBG-7_DocumentationFramework
-#        branch: develop
+      branch: develop
 
   - provider: script
     skip_cleanup: true
