--- a/fintech-examples/fintech-api/pom.xml
+++ b/fintech-examples/fintech-api/pom.xml
@@ -76,7 +76,7 @@
               <language>spring</language>
               <output>${project.build.directory}/generated-sources/open-api/</output>
               <configOptions>
-                <sourceFolder>src/main</sourceFolder>
+                <sourceFolder>src/main/java</sourceFolder>
                 <basePackage>de.adorsys.opba.fintechapi</basePackage>
                 <configPackage>de.adorsys.opba.fintechapi.config</configPackage>
                 <modelPackage>de.adorsys.opba.fintechapi.model</modelPackage>
@@ -90,6 +90,8 @@
                 <useTags>true</useTags>
                 <library>spring-mvc</library>
                 <swaggerDocketConfig>false</swaggerDocketConfig>
+                <generateApiTests>false</generateApiTests>
+                <generateModelTests>false</generateModelTests>
               </configOptions>
             </configuration>
           </execution>
@@ -115,7 +117,7 @@
             </goals>
             <configuration>
               <sources>
-                <source>${project.build.directory}/generated-sources/open-api/src/main</source>
+                <source>${project.build.directory}/generated-sources/open-api/src/main/java</source>
               </sources>
             </configuration>
           </execution>
