--- a/opba-banking-rest-api/pom.xml
+++ b/opba-banking-rest-api/pom.xml
@@ -74,7 +74,7 @@
 							<language>spring</language>
 							<output>${project.build.directory}/generated-sources/open-api/</output>
 							<configOptions>
-								<sourceFolder>src/main</sourceFolder>
+								<sourceFolder>src/main/java</sourceFolder>
 								<basePackage>de.adorsys.opba.bankingapi.ais</basePackage>
 								<configPackage>de.adorsys.opba.bankingapi.config</configPackage>
 								<modelPackage>de.adorsys.opba.bankingapi.ais.model</modelPackage>
@@ -115,7 +115,7 @@
 						</goals>
 						<configuration>
 							<sources>
-								<source>${project.build.directory}/generated-sources/open-api/src/main</source>
+								<source>${project.build.directory}/generated-sources/open-api/src/main/java</source>
 							</sources>
 						</configuration>
 					</execution>
