--- a/core/banking-protocol/pom.xml
+++ b/core/banking-protocol/pom.xml
@@ -196,6 +196,18 @@
             <artifactId>jsonassert</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>2.25.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ru.lanwen.wiremock</groupId>
+            <artifactId>wiremock-junit5</artifactId>
+            <version>1.3.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
 
