Add Authorisation as explicit header. Add PSU-Consent-Session header.
#83

--- a/opba-banking-rest-api/src/main/resources/static/tpp_bank_search_api.yml
+++ b/opba-banking-rest-api/src/main/resources/static/tpp_bank_search_api.yml
@@ -10,7 +10,7 @@ externalDocs:
 
 paths:
 
-  /v1/search/bankSearch:
+  /v1/banking/search/bankSearch:
     get:
       tags:
       - TppBankSearch
@@ -44,7 +44,7 @@ paths:
         '401':
           $ref: '#/components/responses/401_UNAUTHORIZED'
 
-  /v1/search/bankProfile:
+  /v1/banking/search/bankProfile:
     get:
       tags:
       - TppBankSearch
