--- a/core/banking-protocol/pom.xml
+++ b/core/banking-protocol/pom.xml
@@ -197,15 +197,32 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.github.tomakehurst</groupId>
             <artifactId>wiremock</artifactId>
             <version>2.25.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>ru.lanwen.wiremock</groupId>
-            <artifactId>wiremock-junit5</artifactId>
-            <version>1.3.1</version>
+            <groupId>com.tngtech.jgiven</groupId>
+            <artifactId>jgiven-core</artifactId>
+            <version>1.0.0-RC3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.tngtech.jgiven</groupId>
+            <artifactId>jgiven-spring-junit5</artifactId>
+            <version>1.0.0-RC3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.tngtech.jgiven</groupId>
+            <artifactId>jgiven-junit5</artifactId>
+            <version>1.0.0-RC3</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
