--- a/core/banking-protocol/src/main/resources/tpp-ui/package.json
+++ b/core/banking-protocol/src/main/resources/tpp-ui/package.json
@@ -2,7 +2,7 @@
   "name": "tpp-ui",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
+    "ng": "ng",act_hi_identitylink
     "start": "ng serve --port 5500",
     "build": "ng build",
     "test": "ng test",
